Fix StoryboardByFrame.ipynb and added 48 frames

--- a/Notebooks/StoryboardByFrame.ipynb
+++ b/Notebooks/StoryboardByFrame.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -42,19 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "def decisionFrames(video_paths, video_names):\n",
-    "    frame_dir = \"Data/Video&Frames/Frames\"\n",
+    "    frame_dir = \"../../HumanDetection_YOLOv8/Data/Video&Frames/Frames\"\n",
     "    if not os.path.exists(frame_dir):\n",
     "        os.makedirs(frame_dir)\n",
     "\n",
     "    for i, video_path in enumerate(video_paths):\n",
-    "        video_frame_dir = os.path.join(frame_dir, video_names[i])\n",
-    "        if not os.path.exists(video_frame_dir):\n",
-    "            os.makedirs(video_frame_dir)\n",
-    "\n",
     "        cap = cv2.VideoCapture(video_path)\n",
     "\n",
     "        num_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
@@ -66,9 +62,9 @@
     "\n",
     "            if ret:\n",
     "                if j == frame_index:\n",
-    "                    frame_path = os.path.join(video_frame_dir, f\"{video_names[i]}_{j}.jpg\")\n",
+    "                    frame_path = os.path.join(frame_dir, f\"{video_names[i]}_{j}.jpg\")\n",
     "                    cv2.imwrite(frame_path, frame)\n",
-    "                    frame_index += 180\n",
+    "                    frame_index += 55\n",
     "            else:\n",
     "                break\n",
     "\n",
@@ -89,11 +85,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing video: 100%|██████████| 1/1 [01:13<00:00, 73.91s/it]\n",
+      "\n",
+      "Processing video: 100%|██████████| 1/1 [00:15<00:00, 15.50s/it]\u001B[A"
+     ]
+    }
+   ],
    "source": [
-    "paths = [\"Data/Video&Frames/Videos/\"]\n",
-    "names = [\"SaintPetersburg-Mga\"]\n",
+    "paths = [\"../../HumanDetection_YOLOv8/Data/Video&Frames/Videos/video3.mov\"]\n",
+    "names = [\"video3\"]\n",
     "\n",
     "result = tqdm(desc=\"Processing video\", total=len(paths))\n",
     "for path, name in zip(paths, names):\n",
@@ -115,10 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of files in a folder: 48\n"
+     ]
+    }
+   ],
    "source": [
-    "directory = \"data/images/frames/Saint-Petersburg-Mga\"\n",
+    "directory = \"../../HumanDetection_YOLOv8/Data/Video&Frames/Frames\"\n",
     "file_count = len(os.listdir(directory))\n",
     "\n",
     "print(\"Number of files in a folder:\", file_count)"
