--- a/Notebooks/StoryboardByFrame.ipynb
+++ b/Notebooks/StoryboardByFrame.ipynb
@@ -85,22 +85,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\n",
-      "Processing video: 100%|██████████| 1/1 [01:13<00:00, 73.91s/it]\n",
+      "Processing video: 100%|██████████| 1/1 [00:27<00:00, 27.96s/it]\n",
       "\n",
-      "Processing video: 100%|██████████| 1/1 [00:15<00:00, 15.50s/it]\u001B[A"
+      "Processing video: 100%|██████████| 1/1 [00:27<00:00, 27.65s/it]\u001B[A"
      ]
     }
    ],
    "source": [
-    "paths = [\"../../HumanDetection_YOLOv8/Data/Video&Frames/Videos/video3.mov\"]\n",
-    "names = [\"video3\"]\n",
+    "paths = [\"../../HumanDetection_YOLOv8/Data/Video&Frames/Videos/3.mp4\"]\n",
+    "names = [\"video7\"]\n",
     "\n",
     "result = tqdm(desc=\"Processing video\", total=len(paths))\n",
     "for path, name in zip(paths, names):\n",
@@ -122,13 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of files in a folder: 48\n"
+      "Number of files in a folder: 93\n"
      ]
     }
    ],
