Added model weights package

--- a/Notebooks/HumanDetection_YOLOv8.ipynb
+++ b/Notebooks/HumanDetection_YOLOv8.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1. Dataset"
+    "### 1. Data preparation"
    ],
    "metadata": {
     "collapsed": false
